--- a/style.css
+++ b/style.css
@@ -18,13 +18,13 @@ main {
     grid-column-start: 1;
     grid-column-end: 2; 
     grid-row-start: 2;
-    grid-row-end: 3; 
-    width: 100%; 
-    padding: 0 28% 8% 11%;  
+    grid-row-end: 3;  
+    width: 100%;    
+    padding: 0 30% 14% 15%;  
     display: flex;
     flex-direction: column;
     justify-content: flex-end; 
-    align-items: flex-start;
+    align-items: stretch; 
     background: url(images/bg-pattern-desktop.svg);
     background-size: cover; 
 }
